fix: align price

--- a/src/scss/components/_section-design-projects.scss
+++ b/src/scss/components/_section-design-projects.scss
@@ -1,7 +1,7 @@
 
 .section-design-project {        
     background: linear-gradient(to bottom, $bg-color2 0%, $bg-color2 31.6%, $bg-color2 31.6%, $bg-color1 31.6%, $bg-color1 100%);                
-    position: relative;    
+    position: relative;        
 
     @media (max-width: $huge) {
         background: linear-gradient(to bottom, $bg-color2 0%, $bg-color2 25%, $bg-color2 25%, $bg-color1 25%, $bg-color1 100%);                
@@ -105,8 +105,7 @@
             width: 85%;
             margin: 0 auto;
             padding-top: 24px;
-            padding-left: 35px;
-            padding-bottom: 55px;
+//            padding-left: 35px;            
             background: white;
             box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
 
@@ -123,6 +122,7 @@
             font-family: "Yeseva One", sans-serif;
             font-size: 18px;
             line-height: 25px;
+            margin-left: 35px;
 
             @media(max-width: $small) {
                 font-size: 15px;
@@ -132,7 +132,9 @@
         ul {
             margin: 0 auto;
             padding-top: 6px;
+            margin-left: 35px;
             padding-left: 17px;
+            padding-bottom: 4px;
             background: white;
             font-family: "FuturaBookC", serif;
             font-size: 15px;
@@ -167,10 +169,9 @@
     &__price {
         position: relative;
         box-sizing: border-box;
-        top: -25px;
-        width: 58%;
-        height: 54px;
-        margin-left: 29px;
+        top: 25px;
+        width: 69%;
+        height: 54px;        
         text-align: center;
         font-family: "Yeseva One", sans-serif;
         font-size: 18px;
@@ -192,9 +193,5 @@
         }
     }
 
-    &__steps {
-        width: 100%;
-        height: 707px;
-        border: 1px solid green;
-    }
+ 
 }
